# h2h-galleryinfo-parser

./: .gitignore  CLAUDE.md  README.md  mypy.ini  pyproject.toml  setup.py
.claude/hooks/: finalize-python.sh
.github/workflows/: publish.yml
src/galleryinfo_parser/: __init__.py  __init__.pyi  gallery_url_parser.py  galleryinfo_parser.py
src/h2h_galleryinfo_parser/: __init__.py  gallery_url_parser.py  galleryinfo_parser.py
tests/: test_galleryinfo_parser.py
