[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "h2h-galleryinfo-parser"
version = "0.3.0"
description = "A simple H@H GalleryInfo Parser"
readme = "README.md"
authors = [{ name = "Kuan-Lun Wang" }]
license = { text = "GNU Affero General Public License v3" }
requires-python = ">=3.14"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = ["black", "ruff", "mypy", "pymarkdownlnt"]

[project.urls]
Homepage = "https://github.com/Kuan-Lun/h2h-galleryinfo-parser"
Source = "https://github.com/Kuan-Lun/h2h-galleryinfo-parser"
Tracker = "https://github.com/Kuan-Lun/h2h-galleryinfo-parser/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/h2h_galleryinfo_parser"]

[tool.black]
target-version = ["py314"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
